--- a/src/app.html
+++ b/src/app.html
@@ -17,3 +17,12 @@
     <div id="svelte">%svelte.body%</div>
   </body>
 </html>
+<!-- <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.0.4/dist/locomotive-scroll.min.js"></script>
+<script>
+  window.addEventListener("load", () => {
+    const scroll = new LocomotiveScroll({
+      el: document.querySelector(".container"),
+      smooth: true,
+    })
+  })
+</script> -->
